# flash-loan-arbitrage-bot

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SESSION_NOTES.md  START.bat  TODO.md  TODO_TOMORROW.md  docker-compose.yml  memory.md  package-lock.json  package.json  state.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
agents/: CLAUDE.md  STATUS.md  package.json  pnpm-lock.yaml  tsconfig.json
agents/infrastructure/architect/: package.json
agents/keymaker/: package.json  tsconfig.json
agents/keymaker/src/: database.ts  index.ts  rotation.ts  types.ts  vault.ts  walletManager.ts
agents/link/: package.json
agents/link/src/: index.ts  kafka.ts  router.ts  types.ts
agents/memory/: README.md  architect.json  lock.json  mouse.json  roland.json
agents/merovingian/: package.json
agents/merovingian/src/: detector.ts  index.ts  monitor.ts  types.ts
agents/research/mouse/: package.json
agents/security/lock/: package.json
agents/security/roland/: package.json
agents/shared/: package.json
agents/shared/src/: agentBase.ts  chains.ts  config.ts  index.ts  logger.ts  taskCli.ts  taskQueue.test.ts  taskQueue.ts  types.ts
agents/tasks/: .gitignore
analysis/: CLAUDE.md  README.md  STATUS.md  pyproject.toml
analysis/oracle/: __init__.py  aggregator.py  detector.py  mmbf_detector.py
analysis/oracle/tests/: __init__.py  test_aggregator.py  test_detector.py
analysis/persephone/: __init__.py  sentiment.py
analysis/persephone/tests/: __init__.py  test_sentiment.py
analysis/rama_kandra/: __init__.py  liquidity.py  tvl.py
analysis/rama_kandra/tests/: __init__.py  test_liquidity.py  test_tvl.py
analysis/sati/: __init__.py
analysis/sati/models/: __init__.py  gas_optimizer.py  opportunity_predictor.py
analysis/sati/tests/: __init__.py  test_gas_optimizer.py  test_opportunity_predictor.py
analysis/shared/: __init__.py  config.py  logger.py  types.py
contracts/: CLAUDE.md  STATUS.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployBSC.s.sol
contracts/src/: FlashLoanReceiver.sol  FlashLoanReceiverObfuscated.sol  MultiDexRouter.sol
contracts/src/interfaces/: IMultiDexRouter.sol
contracts/src/lib/: Obfuscation.sol
contracts/test/: FlashLoanReceiver.t.sol
core/: CLAUDE.md  Cargo.toml  STATUS.md
core/cypher/: Cargo.toml
core/cypher/src/: lib.rs
core/dozer/: Cargo.toml
core/dozer/src/: feed_processor.rs  lib.rs
core/hotpath/: CMakeLists.txt  README.md
core/hotpath-rs/: Cargo.toml
core/hotpath-rs/src/: lib.rs
core/hotpath/benchmark/: bench_main.cpp
core/hotpath/bindings/: ffi.cpp  ffi.hpp
core/hotpath/include/: opportunity_scanner.hpp  price_calculator.hpp  simd_math.hpp  types.hpp
core/hotpath/src/: opportunity_scanner.cpp  price_calculator.cpp  simd_math.cpp
core/hotpath/tests/: test_main.cpp
core/morpheus/: Cargo.toml
core/morpheus/src/: lib.rs
core/morpheus/src/feeds/: bsc.rs  connection.rs  dex_feed.rs  mod.rs
core/morpheus/tests/: bsc_websocket_test.rs
core/neo/: Cargo.toml
core/neo/src/: lib.rs
core/seraph/: Cargo.toml
core/seraph/src/: lib.rs
core/shared/config/: Cargo.toml
core/shared/config/src/: lib.rs
core/shared/metrics/: Cargo.toml
core/shared/metrics/src/: lib.rs
core/shared/types/: Cargo.toml
core/shared/types/src/: lib.rs
core/trinity/: Cargo.toml
core/trinity/src/: flashbots.rs  lib.rs
dashboard/: CLAUDE.md  STATUS.md  UI_IMPROVEMENTS_TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.api.json  tsconfig.json  vite.config.ts
dashboard/ai/: ANALYSIS_PIPELINE.md
dashboard/db/: schema.sql  schema.sqlite.sql  setup.js
dashboard/docs/: DASHBOARD_SPEC.md  WIREFRAMES.md
dashboard/public/: matrix-logo-small.webm
dashboard/scripts/: execute-arbitrage.ts  seed-sample-data.ts  startup.ts  test-flash-loan.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: db.ts  server.ts
dashboard/src/components/: ErrorBoundary.tsx  ExecutionConfigPanel.tsx  ExecutionQueue.tsx  FastModeControl.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/pages/: AIInsights.tsx  Competitors.tsx  Contracts.tsx  History.tsx  MultiChainOverview.tsx  Opportunities.tsx  Overview.tsx  Prices.tsx  Strategy.tsx  Wallets.tsx
dashboard/src/services/: agentConnector.ts  competitorIngestion.ts  execution.ts  mmbfDetector.ts  priceIngestion.ts  websocketServer.ts
dashboard/src/store/: useStore.ts
dashboard/src/types/: index.ts
deploy/docker/: Dockerfile.python  Dockerfile.typescript  init-db.sql
deployments/: .gitkeep  bsc.json  sepolia.json
docs/: CRASH_PREVENTION.md  MEV_PROTECTION_AND_TITAN_BUILDER_REPORT.md  MULTI_HOP_ARBITRAGE_RESEARCH.md  PROGRESS.md  deployment.md
docs/agents/: AGENTS.md
hotpath/: CLAUDE.md  CMakeLists.txt  STATUS.md
hotpath/include/arbitrage/: Calculator.hpp
hotpath/include/memory/: Arena.hpp
hotpath/include/network/: WebSocket.hpp
hotpath/include/orderbook/: OrderBook.hpp  SPSCQueue.hpp
hotpath/include/tx/: Composer.hpp
hotpath/src/: main.cpp
hotpath/src/arbitrage/: Calculator.cpp
hotpath/src/memory/: Arena.cpp
hotpath/src/network/: WebSocket.cpp
hotpath/src/orderbook/: OrderBook.cpp
hotpath/src/tx/: Composer.cpp
monitoring/tank/alerts/: alertmanager.yml
monitoring/tank/prometheus/: prometheus.yml
orchestration/: crashProtection.ts  fileLock.ts  index.ts  stateManager.ts
projects/: FUTURE_CONTRACT_OBFUSCATION_PROJECT.md  MULTI_HOP_ARBITRAGE_OPTIMIZATION_PROJECT.md
scripts/: .gitignore  deploy-testnet.sh  detached-run.js  monitor-opportunities.ts  process-manager.js  validate-command.js
src/services/mev-protection/: chain-aware-executor.d.ts  chain-aware-executor.js  chain-aware-executor.ts  index.d.ts  index.js  index.ts  mev-protection-manager.d.ts  mev-protection-manager.js  mev-protection-manager.ts  private-transaction.service.d.ts  private-transaction.service.js  private-transaction.service.ts  protected-arbitrage.service.js  (+11 more)
testing/: multi-instance-crash-test.ps1  multi-instance-test.ps1  test-file-lock.ts
(+33 files in other folders)
