[workspace]
resolver = "2"
members = [
    "neo",
    "morpheus",
    "dozer",
    "trinity",
    "seraph",
    "cypher",
    "hotpath-rs",
    "shared/types",
    "shared/config",
    "shared/metrics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matrix Team"]
license = "MIT"
repository = "https://github.com/matrix/flash-loan-arbitrage-bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web3 / Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
alloy = { version = "0.1", features = ["full"] }
revm = { version = "8.0", features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
eyre = "0.6"

# Configuration
config = "0.14"
dotenv = "0.15"

# HTTP / WebSocket
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
hex = "0.4"
base64 = "0.21"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Testing
mockall = "0.12"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
debug = true
