[package]
name = "dozer"
description = "DOZER - Data Pipeline Operator: Processes and transforms market data"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
bytes.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
