[package]
name = "morpheus"
description = "MORPHEUS - Market Data Coordinator: Awakens the system to market reality"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
bytes.workspace = true
dashmap.workspace = true

# WebSocket connections
tokio-tungstenite.workspace = true

# Web3
ethers.workspace = true
ethers-providers.workspace = true

# Internal
matrix-types = { path = "../shared/types" }

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
