[package]
name = "trinity"
description = "TRINITY - Execution Engine: Takes action with precision"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
bytes.workspace = true
hex.workspace = true

# Web3
ethers.workspace = true
ethers-core.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true

# HTTP client for Flashbots
reqwest.workspace = true

# Hashing (for Flashbots signature placeholder)
md5 = "0.7"

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
