[package]
name = "matrix-config"
description = "Configuration management for Matrix flash loan arbitrage bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
config.workspace = true
toml.workspace = true
dotenv.workspace = true
thiserror.workspace = true
